--- a/android/java/res/layout/brave_shields_option_layout.xml
+++ b/android/java/res/layout/brave_shields_option_layout.xml
@@ -11,7 +11,7 @@
     android:visibility="gone"
     android:orientation="vertical" >
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -32,11 +32,14 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="16sp"
+            android:layout_marginEnd="16dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:textColor="@color/shield_title_color"/>
 
-    </FrameLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/option_text"
