Add button/informer to switch Android system sync toggle; fixes brave-browser#11128

--- a/android/java/res/layout/brave_sync_done.xml
+++ b/android/java/res/layout/brave_sync_done.xml
@@ -57,6 +57,46 @@
             android:layout_width="match_parent"
             android:visibility="invisible" />
 
+        <!-- Section to infor about system sync switch is off -->
+        <LinearLayout android:id="@+id/brave_sync_btn_android_sync_settings"
+             android:orientation="horizontal"
+             android:layout_height="wrap_content"
+             android:layout_width="match_parent"
+
+             android:background="@drawable/brave_sync_warning"
+             android:padding="10dp"
+             android:layout_marginStart="15dp"
+             android:layout_marginEnd="15dp"
+             android:layout_marginBottom="15dp" >
+
+             <ImageView android:id="@+id/brave_sync_image_not_working"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_sync_error_48dp"
+                android:scaleType="center"
+                android:contentDescription="@null"
+                android:layout_gravity="center" />
+
+                <LinearLayout android:orientation="vertical"
+                     android:layout_height="wrap_content"
+                     android:layout_width="match_parent" >
+
+                     <TextView
+                         android:text="@string/sync_error_card_title"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:gravity="left"
+                         android:textSize="15sp" />
+
+                     <TextView
+                         android:text="@string/hint_android_sync_disabled"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:gravity="left"
+                         android:textSize="12sp" />
+                </LinearLayout>
+        </LinearLayout>
+
         <Button android:id="@+id/brave_sync_btn_add_device"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
